# ml-faultdetection-epuck

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  config.ini  execute.sh  execute_all_faults.sh
bash/: setup_pre_commit.sh
classifiers/: booster_aggr_num.json  booster_floc_bin.json  booster_homi_bin.json  booster_homi_num.json
controllers/: CMakeLists.txt
controllers/behaviors/: aggregatebehavior.cpp  aggregatebehavior.h  behavior.cpp  behavior.h  dispersebehavior.cpp  dispersebehavior.h  flockingbehavior.cpp  flockingbehavior.h  homingbehavior.cpp  homingbehavior.h  randomwalkbehavior.cpp  randomwalkbehavior.h
controllers/fault_detection/: CMakeLists.txt  fault_detection.cpp  fault_detection.h  fault_detection_multifault.cpp  fault_detection_multifault.h
controllers/util/: util.cpp  util.h
data/binary_training/disp/: automatizer.sh
data/binary_training/homi/: aa.py
data/numerical_training/aggr/: aa.py  automatizer.sh
experiments/: fault_detection.argos  fault_detection_multifault.argos
loop_functions/: CMakeLists.txt
loop_functions/id_loop_functions_epuck/: CMakeLists.txt  id_qtuser_functions_epuck.cpp  id_qtuser_functions_epuck.h
